--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 16:05:02 2018</p>
+         Last Run: Mon Nov 19 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>15</td>
+                        <td>WSW</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "0",
                  "1",
-                 "2",
                  "2"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "15",
-                 "12"
+                 "21",
+                 "17",
+                 "14"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 16:05:02 2018</p>
+         Last Run: Mon Nov 19 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -250,7 +250,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
@@ -274,11 +274,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "56",
                  "59",
-                 "62"
+                 "61"
                ]
              },
              {
@@ -400,7 +400,7 @@
                "data":[
                  "78",
                  "70",
-                 "65"
+                 "64"
                ]
              }
            ]
@@ -440,9 +440,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 16:05:02 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
+         Last Run: Mon Nov 19 17:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -462,50 +462,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
-                        <td>2</td>
-                        <td>65</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>7</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>44</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>1</td>
-                        <td>59</td>
+                        <td>7</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>43</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>-2</td>
+                        <td>6</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNE</td>
-                        <td>42</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>1</td>
-                        <td>55</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>E</td>
-                        <td>33</td>
+                        <td>NW</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -522,8 +510,7 @@
            "labels":[
              "12:00 PM",
              "01:00 PM",
-             "02:00 PM",
-             "03:00 PM"
+             "02:00 PM"
            ],
            "datasets":[
              {
@@ -533,10 +520,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-4",
                  "-3",
-                 "-3",
-                 "-3"
+                 "-2"
                ]
              },
              {
@@ -546,10 +532,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
-                 "0",
-                 "0"
+                 "1"
                ]
              }
            ]
@@ -597,225 +582,6 @@
            "labels":[
              "12:00 PM",
              "01:00 PM",
-             "02:00 PM",
-             "03:00 PM"
-           ],
-           "datasets":[
-             {
-               "label":"precipProbability",
-               "borderColor":"rgba(0,0,255,1)",
-               "borderWidth":2,
-               "backgroundColor":"rgba(0,0,255,0.5)",
-               "data":[
-                 "2",
-                 "1",
-                 "1",
-                 "1"
-               ]
-             },
-             {
-               "label":"humidity",
-               "borderColor":"rgba(40,177,255,1)",
-               "borderWidth":2,
-               "backgroundColor":"rgba(40,177,255,0.5)",
-               "data":[
-                 "65",
-                 "59",
-                 "55",
-                 "55"
-               ]
-             },
-             {
-               "label":"cloudCover",
-               "borderColor":"rgba(233,37,255,1)",
-               "borderWidth":2,
-               "backgroundColor":"rgba(233,37,255,0.5)",
-               "data":[
-                 "44",
-                 "43",
-                 "42",
-                 "33"
-               ]
-             }
-           ]
-         };
-                  var options = {
-                     legend: {
-                         position: 'right'
-                     },
-                     scales: {
-                         xAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Date/Time', display: true},
-                             ticks: {
-                                 autoSkip: false
-                             }
-                         }],
-                         yAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Percentage (%)', display: true},
-                             ticks: {
-                                 beginAtZero: true
-                             }
-                         }]
-                     },
-                     tooltips: {
-                         mode: 'index'
-                     }
-                  };
-                  var MyNewChart = new Chart(ctx, {
-                     type: 'bar',
-                     data: data,
-                     options: options
-                  });
-               </script>
-         <hr style="border-width:5px ">
-      </div>
-      <div style="padding:10px;border: 1px none black">
-         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
-         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 16:05:02 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
-               <table class="table table-striped">
-                  <thead>
-                     <tr>
-                        <th>Forecast Time</th>
-                        <th>Summary</th>
-                        <th>Temperture (°C)</th>
-                        <th>Feels Like (°C)</th>
-                        <th>POP (%)</th>
-                        <th>Humidity (%)</th>
-                        <th>UV</th>
-                        <th>Wind (km/hr)</th>
-                        <th>Wind Dir.</th>
-                        <th>Cloud Cover (%)</th>
-                     </tr>
-                  </thead>
-                  <tbody>
-                     <tr>
-                        <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>7</td>
-                        <td>57</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>NW</td>
-                        <td>57</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>7</td>
-                        <td>54</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>NW</td>
-                        <td>58</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>6</td>
-                        <td>51</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>NW</td>
-                        <td>58</td>
-                     </tr>
-                  </tbody>
-               </table>
-               </style>
-               <div class="container-fluid">
-               	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
-               	</div>
-               </div>
-               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-               <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
-                  var data ={
-           "labels":[
-             "12:00 PM",
-             "01:00 PM",
-             "02:00 PM"
-           ],
-           "datasets":[
-             {
-               "label":"apparentTemperature",
-               "borderColor":"rgba(92,0,141,1)",
-               "borderWidth":2,
-               "pointColor":"rgba(92,0,141,1)",
-               "backgroundColor":"rgba(92,0,141,0)",
-               "data":[
-                 "-4",
-                 "-3",
-                 "-3"
-               ]
-             },
-             {
-               "label":"temperature",
-               "borderColor":"rgba(252,49,18,1)",
-               "borderWidth":2,
-               "pointColor":"rgba(252,49,18,1)",
-               "backgroundColor":"rgba(252,49,18,0)",
-               "data":[
-                 "-1",
-                 "0",
-                 "0"
-               ]
-             }
-           ]
-         };
-                  var options = {
-                     legend: {
-                         position: 'right'
-                     },
-                     scales: {
-                         xAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Date/Time', display: true},
-                             ticks: {
-                                 autoSkip: false
-                             }
-                         }],
-                         yAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Temp (C)', display: true},
-                             ticks: {
-                                 beginAtZero: false
-                             }
-                         }]
-                     },
-                     tooltips: {
-                         mode: 'index'
-                     }
-                  };
-                  var MyNewChart = new Chart(ctx, {
-                     type: 'line',
-                     data: data,
-                     options: options
-                  });
-               </script>
-               </style>
-               <div class="container-fluid">
-               	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
-               	</div>
-               </div>
-               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-               <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
-                  var data ={
-           "labels":[
-             "12:00 PM",
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -836,7 +602,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "58",
                  "54",
                  "51"
                ]
@@ -847,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
                  "58",
-                 "58"
+                 "59",
+                 "59"
                ]
              }
            ]
