--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 17:05:02 2018</p>
+         Last Run: Mon Nov 19 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,21 +31,21 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
+                        <td>1</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>69</td>
-                        <td>0</td>
-                        <td>10</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
@@ -57,7 +57,7 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>71</td>
                         <td>0</td>
                         <td>10</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-1",
                  "-4",
                  "-4"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "1",
                  "-1",
                  "-1"
                ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
-                 "2"
+                 "0",
+                 "1"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
+                 "64",
                  "70",
                  "71"
                ]
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
+                 "27",
                  "17",
                  "14"
                ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 17:05:02 2018</p>
+         Last Run: Mon Nov 19 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -252,7 +252,7 @@
                         <td>0</td>
                         <td>56</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SSW</td>
                         <td>78</td>
                      </tr>
@@ -264,9 +264,9 @@
                         <td>0</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -278,7 +278,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -399,8 +399,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "78",
-                 "70",
-                 "64"
+                 "71",
+                 "65"
                ]
              }
            ]
@@ -440,9 +440,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 17:05:02 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
+         Last Run: Mon Nov 19 18:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -463,37 +463,49 @@
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-4</td>
-                        <td>7</td>
-                        <td>58</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>7</td>
-                        <td>54</td>
+                        <td>2</td>
+                        <td>57</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
-                        <td>59</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>6</td>
-                        <td>51</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>59</td>
+                        <td>N</td>
+                        <td>49</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>54</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>NE</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -510,7 +522,8 @@
            "labels":[
              "12:00 PM",
              "01:00 PM",
-             "02:00 PM"
+             "02:00 PM",
+             "03:00 PM"
            ],
            "datasets":[
              {
@@ -520,9 +533,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
                  "-3",
-                 "-2"
+                 "-3",
+                 "-3",
+                 "-3"
                ]
              },
              {
@@ -534,7 +548,8 @@
                "data":[
                  "-1",
                  "0",
-                 "1"
+                 "0",
+                 "0"
                ]
              }
            ]
@@ -582,6 +597,225 @@
            "labels":[
              "12:00 PM",
              "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "2",
+                 "2",
+                 "1",
+                 "2"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "63",
+                 "57",
+                 "54",
+                 "54"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "49",
+                 "49",
+                 "49",
+                 "42"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Mon Nov 19 18:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>7</td>
+                        <td>58</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>60</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>7</td>
+                        <td>54</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>63</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>7</td>
+                        <td>51</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>65</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-4",
+                 "-3",
+                 "-3"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-1",
+                 "0",
+                 "0"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -593,7 +827,7 @@
                "data":[
                  "7",
                  "7",
-                 "6"
+                 "7"
                ]
              },
              {
@@ -613,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "59",
-                 "59"
+                 "60",
+                 "63",
+                 "65"
                ]
              }
            ]
